--- a/build.properties
+++ b/build.properties
@@ -1,10 +1,10 @@
-project.name=
+project.name=Demo01
 project.title=Demo01
 project.version=1.0.0
-project.main.class=com.snapgames.apps.App
+project.main.class=com.snapgames.apps.Demo01App
 project.javadoc.classpath=com.snapgames.apps
-project.javadoc.packages=--group "" com.snapgames.apps
-project.author.name=FrÃ©dÃ©ric Delorme
+project.javadoc.packages=--group "Demo01" com.snapgames.apps
+project.author.name=Frédéric Delorme
 project.author.email=frederic.delorme@gmail.com
 project.build.jdk.version=22
 project.build.jars=
