feat(checkstyle): add missing resources to add checkstyles control

--- a/build.properties
+++ b/build.properties
@@ -3,7 +3,7 @@ project.title=Demo01
 project.version=1.0.0
 project.main.class=com.snapgames.apps.Demo01Frame
 project.javadoc.classpath=com.snapgames.apps
-project.javadoc.packages=--group "Demo01" com.snapgames.apps
+project.javadoc.packages=-group "Demo01" com.snapgames.apps
 project.author.name=Frédéric Delorme
 project.author.email=frederic.delorme@gmail.com
 project.build.jdk.version=22
