--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,6 @@
 app.exit=false
 app.world.gravity=0.0981
 app.debug.level=2
+app.debug.filter=DEBUG,INFO,WARN,ERROR
 app.render.fps=60
 app.update.ups=60
