feat(Scene): Add scene implementation.
- Add Scene interface,
- Add AbstractScene for default behaviors and processing,
- Add PlayScene in replacement of previous createScene() content,
- update all getEntities() to scene.getEntities().

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,10 +1,10 @@
-app.exit=false
 app.debug.level=2
 app.debug.filter=DEBUG,INFO,WARN,ERROR
 app.render.fps=60
 app.update.ups=60
 app.window.width=640
 app.window.height=480
+app.window.full.screen=false
 app.render.buffer.width=320
 app.render.buffer.height=240
 app.world.gravity=0.0981
