--- a/build.properties
+++ b/build.properties
@@ -1,9 +1,9 @@
-project.name=Demo01
-project.title=Demo01
+project.name=GameApp
+project.title=GameApp
 project.version=1.0.0
 project.main.class=com.snapgames.apps.desktop.game.GameApp
 project.javadoc.classpath=com.snapgames.apps
-project.javadoc.packages=-group "Demo01" com.snapgames.apps
+project.javadoc.packages=-group "GameApp" com.snapgames.apps
 project.author.name=Frédéric Delorme
 project.author.email=frederic.delorme@gmail.com
 project.build.jdk.version=22
