fix(debugfilter): Fixed Debug Filter by entity name.

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,7 @@
 app.debug.level=2
-app.debug.filter=DEBUG,INFO,WARN,ERROR
+app.debug.logger.filter=DEBUG,INFO,WARN,ERROR
+app.debug.entity.filter=Player
+
 app.render.fps=60
 app.update.ups=60
 app.window.width=640
